# Kit

./: .gitignore  Cargo.toml
docs/: BM25_EVALUATION_REPORT.md
openspec/changes/add-bm25-evaluation/: proposal.md  tasks.md
openspec/changes/add-bm25-evaluation/specs/core-engine/: spec.md
openspec/changes/add-fastembed-embedding/: proposal.md  tasks.md
openspec/changes/add-fastembed-embedding/specs/core-engine/: spec.md
