[workspace]
members = [
    "packages/core",
    "packages/bridge",
    "packages/server",
    "packages/cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Contextfy Team"]
license = "Apache 2.0"

[workspace.dependencies]
# Runtime
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database & Storage
# lancedb = "0.5"
arrow = "=52.0.0"
tantivy = "0.22"
tantivy-jieba = "0.11"

# Parsing
pulldown-cmark = "0.9"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Web
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }

# FFI
napi = { version = "2.14", default-features = false }
napi-derive = "2.14"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Testing
tempfile = "3.8"

# Embeddings
fastembed = "5"

# Text processing
regex = "1"

# Pin chrono to avoid arrow conflict
chrono = "=0.4.30"
